--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css">
-  <nav class="navbar navbar-default row">
-    <div class="container col-lg-12 col-md-6 col-sm-4">
+  <nav class="navbar navbar-default">
+    <div class="container">
       <div class="navbar-header">
         <p class="navbar-brand">DAILY JOURNAL</p>
       </div>
